[package]
name = "burn"
version = "0.1.0"
edition = "2021"

[dependencies]
#burn = { git = "https://github.com/tracel-ai/burn", rev = "3d77efc30565177f19b9d1792f3aca25bf372f47", features = ["wgpu"] }
burn = { version = "0.14.0", features = ["wgpu"] }

[build-dependencies]
#burn-import = { git = "https://github.com/tracel-ai/burn", rev = "3d77efc30565177f19b9d1792f3aca25bf372f47" }
burn-import = "0.14.0"